tests/idris2/perror001/expected
1/1: Building PError (PError.idr)
Error: Bracket is not properly closed.

PError.idr:4:7--4:8
 1 | foo : Int -> Int
 2 | foo x = x
 3 | 
 4 | bar : (Int -> Int
           ^

